--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,6 +23,7 @@ header{
 
     .heroText_box{
         position: absolute;
+        text-align: center;
         top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -45,6 +46,7 @@ header{
                 font-weight: 400;
                 font-size: 2.5rem;
                 text-align: center;
+                margin-bottom: 4rem;
     
             }
         }
