--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/typography";
 @import "./abstracts/variables";
 @import "./layout/header";
+@import "./components/button";
 
 
 //================================================
