--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,3 +4,26 @@ body{
     line-height: 1.7;
     color: #7C7070;
 }
+
+.header_primary{
+    color: $color-white-1;
+
+    &_main{
+        display: block;
+        font-weight: 500;
+        font-size: 5rem;
+        text-align: center;
+
+    }
+
+    &_sub{
+        display: block;
+        text-transform: lowercase;
+        letter-spacing: .5rem;
+        font-weight: 400;
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 4rem;
+
+    }
+}
