--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,18 +4,17 @@
         text-decoration: none;
         text-transform: uppercase;
         display: inline-block;
-        padding: 1rem 5rem;
-        transition: all .2s;
+        transition: all .2s;  
+    }
 
-        &:hover{
-            transform: translateY(-.7rem);
-            box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-        }
+    &:hover{
+        transform: translateY(-.7rem);
+        box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+    }
 
-        &:active{
-            transform: translateY(0rem);
-            box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
-        }
+    &:active{
+        transform: translateY(0rem);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
     }
 }
 
@@ -23,7 +22,19 @@
     color: $color-lightGrey-1;
     background-color: $color-white-1;
     border-radius: 3rem;
+    padding: 1rem 5rem;
     font-weight: 400;
     font-size: 1.7rem;
 
+}
+
+.btn_secondary{
+    color: $color-lightBlue;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 1.5rem;
+
+    &:hover{
+        border-bottom: .2rem solid $color-lightBlue;
+    }
 }
