--- a/sass/main.css
+++ b/sass/main.css
@@ -26,6 +26,17 @@ body {
   margin-bottom: 4rem;
 }
 
+.header_secondary {
+  color: #7C7070;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 2.5rem;
+}
+
+.paragraph {
+  font-size: 1.8rem;
+}
+
 header {
   position: relative;
   height: 95vh;
@@ -58,19 +69,18 @@ header .heroText_box {
   text-decoration: none;
   text-transform: uppercase;
   display: inline-block;
-  padding: 1rem 5rem;
   -webkit-transition: all .2s;
   transition: all .2s;
 }
 
-.btn:link:hover, .btn:visited:hover {
+.btn:hover {
   -webkit-transform: translateY(-0.7rem);
           transform: translateY(-0.7rem);
   -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
-.btn:link:active, .btn:visited:active {
+.btn:active {
   -webkit-transform: translateY(0rem);
           transform: translateY(0rem);
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
@@ -81,8 +91,20 @@ header .heroText_box {
   color: #7C7070;
   background-color: #F7F7F7;
   border-radius: 3rem;
+  padding: 1rem 5rem;
   font-weight: 400;
   font-size: 1.7rem;
+}
+
+.btn_secondary {
+  color: #12E1F8;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.btn_secondary:hover {
+  border-bottom: 0.2rem solid #12E1F8;
 }
 
 *,
