fuckin around with divs and added _utilities file
title

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,6 +33,7 @@
     display: inline-block;
     font-weight: 600;
     font-size: 1.5rem;
+    width: 13rem;
 
     &:hover{
         border-bottom: .2rem solid $color-lightBlue;
