--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,10 @@
 
 @import "./components/images";
 
+@import "./layout/flex";
+
+@import "./base/utilities";
+
 //================================================
 
 *,
