--- a/sass/main.css
+++ b/sass/main.css
@@ -112,6 +112,37 @@ header .heroText_box {
   border: 1rem solid #12E1F8;
   padding: .5rem;
   width: 50rem;
+  height: auto;
+}
+
+.section_info {
+  position: absolute;
+}
+
+.section_info .infoAll_box {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 10rem;
+}
+
+.section_info .infoText_box {
+  position: relative;
+  top: 5rem;
+}
+
+.section_info .infoImage_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .u_center_text {
@@ -128,6 +159,10 @@ header .heroText_box {
 
 .u_mb_lg {
   margin-bottom: 8rem;
+}
+
+.section_info {
+  padding: 7rem 7rem;
 }
 
 *,
