--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,8 @@
+// SECTION_INFO =========================================
+
 .section_info{
-    padding: 7rem 7rem;
+    // padding: 7rem 7rem;
+
+    display: grid;
+    grid-gap: 2rem;
 }
