added wrappers and grid in intro
also begin changing the secondary button design

--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -1,6 +1,9 @@
-.infoImage{
+.introImage{
     border: 1rem solid $color-lightBlue;
     padding: .5rem;
     width: 50rem;
     height: auto;
 }
+
+
+
