--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,9 +33,7 @@
     display: inline-block;
     font-weight: 600;
     font-size: 1.5rem;
-    width: 13rem;
-
-    &:hover{
-        border-bottom: .2rem solid $color-lightBlue;
-    }
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    border: .2rem solid $color-lightBlue;
 }
