--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,32 @@
-// SECTION_INFO =========================================
-
-.section_info{
-    // padding: 7rem 7rem;
-
+.section_intro{
+    // GRID SPECIFICATIONS ===========================
     display: grid;
-    grid-gap: 2rem;
+    grid-gap: 10rem;
+    padding: 20rem;
+
+    .intro_col_1{
+        grid-column: 1/2;
+    }
+
+    .intro_col_2{
+        grid-column: 2/3;
+    }
+    // ===============================================
+    // SECTION ELEMENT SPACING
+    // ===============================================
+
+    .introText_wrapper{
+        padding-top: 4rem;
+
+        .intro_header{
+            padding-bottom: 1.5rem;
+        }
+
+        .intro_paragraph{
+            padding-bottom: 2rem;
+        }
+    }
+    
+    
+    
 }
