--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 //=====COLORS==================
 
+$color-hoverGrey-1: #f3f2f2;
 $color-lightGrey-1: #7C7070;
 $color-lightGrey-2: #515150;
 $color-darkGrey: #3B3B3A;
