--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,15 +7,6 @@
         transition: all .2s;  
     }
 
-    &:hover{
-        transform: translateY(-.7rem);
-        box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-    }
-
-    &:active{
-        transform: translateY(0rem);
-        box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
-    }
 }
 
 .btn_white{
@@ -25,6 +16,16 @@
     padding: 1rem 5rem;
     font-weight: 400;
     font-size: 1.7rem;
+
+    &:hover{
+        transform: translateY(-.7rem);
+        box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+    }
+
+    &:active{
+        transform: translateY(0rem);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+    }
 
 }
 
@@ -36,4 +37,8 @@
     padding: 1rem 2rem;
     border-radius: 1rem;
     border: .2rem solid $color-lightBlue;
+
+    &:hover{
+        background-color: $color-hoverGrey-1;
+    }
 }
