--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,16 @@
-@import "./base/typography";
 @import "./abstracts/variables";
+
+@import "./base/typography";
+
 @import "./layout/header";
+
 @import "./components/button";
 
+@import "./components/images";
+
+@import "./base/utilities";
+
+@import "./pages/home";
 
 //================================================
 
