changed a bunch of class names and created benefits-box.scss
title

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -43,3 +43,7 @@ body{
 .paragraph{
     font-size: $default-fontSize;
 }
+
+.intro-box_paragraph{
+    border-top: solid $color-lightGrey-1 .1rem;
+}
