--- a/sass/main.css
+++ b/sass/main.css
@@ -37,6 +37,10 @@ body {
   font-size: 1.8rem;
 }
 
+.intro-box_paragraph {
+  border-top: solid #7C7070 0.1rem;
+}
+
 header {
   position: relative;
   height: 95vh;
@@ -110,7 +114,7 @@ header .heroText_box {
   background-color: #f3f2f2;
 }
 
-.introImage {
+.introImage-box_image {
   border: 1rem solid #12E1F8;
   padding: .5rem;
   width: 50rem;
@@ -152,21 +156,17 @@ header .heroText_box {
   grid-column: 2/3;
 }
 
-.section_intro .introText_wrapper {
+.section_intro .intro-box {
   padding-top: 4rem;
 }
 
-.section_intro .introText_wrapper .intro_header {
+.section_intro .intro-box_header {
   padding-bottom: 1.5rem;
 }
 
-.section_intro .introText_wrapper .intro_paragraph {
+.section_intro .intro-box_paragraph {
   padding-top: 1rem;
   padding-bottom: 2rem;
-}
-
-.section_intro .intro_paragraph {
-  border-top: solid #7C7070 0.1rem;
 }
 
 .section_benefits {
@@ -174,6 +174,23 @@ header .heroText_box {
   display: grid;
   grid-gap: 10rem;
   padding: 10rem;
+}
+
+.section_benefits .benefits_col_1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.section_benefits .benefits_col_2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+}
+
+.section_benefits .benefits_col_3 {
+  -ms-grid-column: 3;
+  grid-column: 3/3;
 }
 
 *,
