--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,10 @@
 
 @import "./pages/home";
 
+@import "./components/intro";
+
+@import "./components/benefits-box";
+
 //================================================
 
 *,
