--- a/sass/main.css
+++ b/sass/main.css
@@ -114,7 +114,7 @@ header .heroText_box {
   background-color: #f3f2f2;
 }
 
-.introImage-box_image {
+.introImage-box_img {
   border: 1rem solid #12E1F8;
   padding: .5rem;
   width: 50rem;
@@ -159,25 +159,12 @@ header .heroText_box {
 .section_benefits {
   display: -ms-grid;
   display: grid;
-  grid-gap: 10rem;
-  padding: 10rem;
-}
-
-.section_benefits .benefits_col_1 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
-}
-
-.section_benefits .benefits_col_2 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-}
-
-.section_benefits .benefits_col_3 {
-  -ms-grid-column: 3;
-  grid-column: 3/3;
+  grid-gap: 5rem;
+  padding: 20rem;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (100px)[3];
+      grid-template-rows: repeat(3, 100px);
 }
 
 .intro-box {
@@ -191,6 +178,27 @@ header .heroText_box {
 .intro-box_paragraph {
   padding-top: 1rem;
   padding-bottom: 2rem;
+}
+
+.benefit-box {
+  background-color: #f3f2f2;
+  -webkit-box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.1);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: .7rem;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.benefit-box_img {
+  margin-bottom: 2rem;
+}
+
+.benefit-box_paragraph {
+  margin-top: 1.3rem;
+  padding: .5rem;
 }
 
 *,
