--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,18 +21,21 @@
     // GRID SPECIFICATIONS
     // ===============================================
     display: grid;
-    grid-gap: 10rem;
-    padding: 10rem;
+    grid-gap: 5rem;
+    padding: 20rem;
 
-    .benefits_col_1{
-        grid-column: 1/3;
-    }
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 100px);
 
-    .benefits_col_2{
-        grid-column: 2/3;
-    }
+    // .benefits_col_1{
+    //     grid-column: 1/3;
+    // }
 
-    .benefits_col_3{
-        grid-column: 3/3;
-    }
+    // .benefits_col_2{
+    //     grid-column: 1/3;
+    // }
+
+    // .benefits_col_3{
+    //     grid-column: 1/3;
+    // }
 }
